--- a/sample/src/main/res/layout/item_movie.xml
+++ b/sample/src/main/res/layout/item_movie.xml
@@ -17,6 +17,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/movieName"
+        android:maxLines="1"
+        android:ellipsize="end"
         tools:text="Catch Me If You Can"
         android:textAppearance="@style/TextAppearance.AppCompat" />
 
