--- a/sample/src/main/res/layout/fragment_dialog_movie.xml
+++ b/sample/src/main/res/layout/fragment_dialog_movie.xml
@@ -8,12 +8,14 @@
     android:minWidth="280dp">
 
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/textInputLayout4"
+        android:id="@+id/tilName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="24dp"
         android:layout_marginRight="24dp"
         android:layout_marginTop="8dp"
+        app:errorEnabled="true"
+        app:errorTextAppearance="@style/ErrorAppearance"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4"
@@ -28,16 +30,18 @@
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/textInputLayout3"
+        android:id="@+id/tilYear"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="24dp"
         android:layout_marginTop="8dp"
+        app:errorEnabled="true"
+        app:errorTextAppearance="@style/ErrorAppearance"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toRightOf="@+id/textInputLayout2"
+        app:layout_constraintLeft_toRightOf="@+id/tilGenre"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">
+        app:layout_constraintTop_toBottomOf="@+id/tilName">
 
         <EditText
             android:id="@+id/et_year"
@@ -61,13 +65,15 @@
         android:layout_marginStart="24dp" />
 
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/textInputLayout2"
+        android:id="@+id/tilGenre"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="24dp"
         android:layout_marginStart="24dp"
+        app:errorEnabled="true"
+        app:errorTextAppearance="@style/ErrorAppearance"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
+        app:layout_constraintTop_toBottomOf="@+id/tilName"
         android:layout_marginTop="8dp">
 
         <EditText
