--- a/sample/src/main/res/layout/item_header.xml
+++ b/sample/src/main/res/layout/item_header.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="48dp"
     android:paddingLeft="16dp"
-    android:paddingRight="16dp">
+    android:paddingRight="16dp"
+    android:focusable="true"
+    android:clickable="true"
+    android:background="?attr/selectableItemBackground">
 
     <TextView
         android:layout_width="match_parent"
@@ -17,5 +21,15 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         tools:text="TEXT" />
+
+    <ImageView
+        android:id="@+id/arrow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        app:srcCompat="@drawable/ic_keyboard_arrow_down_black_24dp"
+        android:tint="@color/colorPrimary"/>
 
 </RelativeLayout>
